Bug 305932 - Table's borders style changed on close
Summary: Table's borders style changed on close
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: tables (other bugs)
Version First Reported In: 2.5.0
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-28 15:39 UTC by Giuseppe Calà
Modified: 2012-11-28 11:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Calà 2012-08-28 15:39:06 UTC
Table's border styles aren't preserved when closing and reopening a document. Here before/after samples:

http://i.imgur.com/LKEuy.png
http://i.imgur.com/GNNfJ.png

seems to happen with "unconventional" styles. The colour is preserved.

Reproducible: Always

Steps to Reproduce:
1. apply various style to table's borders
2. save & close
3. open
Actual Results:  
Some styles (double lines, broken lines) are replaced by plain lines

Expected Results:  
same look as beore closing the document
Comment 1 Camilla Boemann 2012-11-10 15:59:44 UTC
Git commit e6c1c31e56cc5ac189d56dad90d90e8b2c938773 by C. Boemann.
Committed on 09/11/2012 at 13:20.
Pushed by boemann into branch 'master'.

Use KoBorder to load the borders.

This gains us support of loading double borders. And since ms type borders
was ported to KoBorder in previous commit we retain loading and gain saving for that as well.

Drawback is that we now loose loading parentstyle borders. In the long run this is
correct as tablecellstyle should have inheritance like para and char styles, but for
now we have lost it. Good news is that I've never seen any odf file that uses this in
practice.

M  +5    -102  libs/kotext/styles/KoTableCellStyle.cpp

http://commits.kde.org/calligra/e6c1c31e56cc5ac189d56dad90d90e8b2c938773
Comment 2 Camilla Boemann 2012-11-28 11:54:35 UTC
Git commit 7fcb7a3423158397933fd0019e03c2b76d2d3f09 by C. Boemann.
Committed on 09/11/2012 at 13:20.
Pushed by boemann into branch 'calligra/2.6'.

Use KoBorder to load the borders.

This gains us support of loading double borders. And since ms type borders
was ported to KoBorder in previous commit we retain loading and gain saving for that as well.

Drawback is that we now loose loading parentstyle borders. In the long run this is
correct as tablecellstyle should have inheritance like para and char styles, but for
now we have lost it. Good news is that I've never seen any odf file that uses this in
practice.

M  +5    -102  libs/kotext/styles/KoTableCellStyle.cpp

http://commits.kde.org/calligra/7fcb7a3423158397933fd0019e03c2b76d2d3f09